clusters/apps/default/workspaces/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: code-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: code-server
    spec:
      # hostname: vscode.home.jrbeverly.dev
      # securityContext:
      #   fsGroup: 1000
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server:latest
          imagePullPolicy: Always
          # securityContext:
          #   runAsUser: 1000
          volumeMounts:
          - name: data
            mountPath: /home/coder
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          # ports:
          #   - name: http
          #     containerPort: 8080
          #     protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      serviceAccountName: code-server
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: code-server-config
