clusters/apps/default/workspaces/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: code-server
