clusters/apps/default/workspaces/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"       
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "vscode.home.jrbeverly.dev"
      secretName: "vscode-tls"
  rules:
    - host: "vscode.home.jrbeverly.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port: 
                  number: 8443
